objects/Main/objects/WSU_Kyou_Info__c.object
<!--
This file is part of WSU_Kyou, a Salesforce native queue for Batch Apex and Scheduled Apex.

Copyright 2013-2014, Wayne State University
License: 3-clause BSD license.  See LICENSE.
-->
<CustomObject>
    <description>Stores information about the state of entries in the Kyou.</description>
    <label>Kyou Info</label>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Lowest_Priority__c</fullName>
        <label>Lowest Priority</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Highest_Priority__c</fullName>
        <label>Highest Priority</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <label>Locked</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
</CustomObject>